// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eligible resident > additional sections content 1`] = `
[
  {
    "body": "While you’re on SCCP, the following rules and conditions apply:

<dl>
<dt>Good Time</dt>
<dd>You still earn good time.</dd>
<dt>Housing</dt>
<dd>You must live in Maine.</dd>
<dt>Employment</dt>
<dd>You must have a job or be looking for one, or be in school. If you qualify for Social Security or disability benefits, you may be able to use those instead.</dd>
<dt>Supervision</dt>
<dd>You have to meet regularly with a probation officer.</dd>
</dl>
",
    "heading": "Quick facts",
    "linkText": "Learn more about how the program works",
    "linkUrl": "/maine/anonres001/eligibility/sccp/about",
  },
  {
    "body": "If you are eligible for SCCP, your case manager will give you an <FormPreview linkText="application packet" /> to fill out, which includes several parts:

<dl>
<dt>Application</dt>
<dd>In the application, you’ll need to outline your release plan, including: your home plan, employment / education plan, treatment (if applicable), and your support system.</dd>
<dt>Essay</dt>
<dd>You’ll have to write an essay describing the path you’re on, the first steps you’ll take when released, and how you plan to do well on SCCP.</dd>
<dt>Paperwork</dt>
<dd>You’ll sign paperwork agreeing to the conditions of the program. You’ll also need to get a warrantless search agreement signed by the person whose place you’ll be living in.</dd>
<dt>Supervision</dt>
<dd>You have to check in regularly with a probation officer while on SCCP.</dd>
</dl>
",
    "heading": "How to apply",
    "linkText": "Learn more about the application process",
    "linkUrl": "/maine/anonres001/eligibility/sccp/application-process",
  },
]
`;

exports[`eligible resident > summary content 1`] = `
{
  "body": "- SCCP is sometimes called “home confinement” or “supervised release”
- You can spend the last part of your sentence under supervision in the community
- SCCP can help you adjust to being back in the community with structured support
",
  "heading": "About the program",
}
`;

exports[`ineligible resident > additional sections content 1`] = `
[
  {
    "body": "While you’re on SCCP, the following rules and conditions apply:

<dl>
<dt>Good Time</dt>
<dd>You still earn good time.</dd>
<dt>Housing</dt>
<dd>You must live in Maine.</dd>
<dt>Employment</dt>
<dd>You must have a job or be looking for one, or be in school. If you qualify for Social Security or disability benefits, you may be able to use those instead.</dd>
<dt>Supervision</dt>
<dd>You have to meet regularly with a probation officer.</dd>
</dl>
",
    "heading": "Quick facts",
    "linkText": "Learn more about how the program works",
    "linkUrl": "/maine/anonres999/eligibility/sccp/about",
  },
]
`;
